@@ -35,6 +35,7 @@ Version 1.7.1+svn:
    * Allow items to be removed from a listbox
    * Fixed objective dialog not recognizing markup (bug #13888)
    * Fix minimap no clipping in the new wiggets
+   * Added preprocessor macros to the wiki grabber tool
 
 Version 1.7.1:
  * AI:
